@@ -2332,7 +2332,12 @@ PROJECT_W_GLOSSARY=No writable glossary file in the glossary folder.
 PROJECT_LOCKED=Project locked. Perhaps it is already opened in another OmegaT instance
 PROJECT_INVALID=The specified folder is not an OmegaT project, or the project file is broken, or there is no valid backup.
 
-#Team work
+# Auto Saving exceptions
+AUTOSAVE_TIMEOUT_TAKING_LOCK=Lock trying timeout during autosave
+AUTOSAVE_GENERIC_ERROR=Got error during autosaving: {0}
+AUTOSAVE_INTERRUPTED=Save thread interrupted: {0}
+
+# Team work
 SVN_START=SVN '{0}' execution start
 SVN_FINISH=SVN '{0}' execution finished successfully
 SVN_ERROR=SVN '{0}' error: {1}
